clang/test/BSC/Negative/Generic/InvalidTemplateParameters/do_not_crash6.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

a b c<[d>();
// expected-error@-1 {{unknown type name 'b'}}
// expected-error@-2 {{expected template parameter}}
// expected-error@-3 {{expected identifier}}
